--- a/Reston.EProc.Runner.IIS/View/create-po.html
+++ b/Reston.EProc.Runner.IIS/View/create-po.html
@@ -173,14 +173,14 @@
                                         <div class="form-group col-md-4">
                                             <label class="title">Nilai PO:</label>
                                             <input class="form-control" type="text" id="no-spk-renewal"><br />
-                                            <button id="id" class="btn btn-success " type="button">
+                                            <!--<button id="id" class="btn btn-success " type="button">
                                                 <a href="#" style="color:white;">AKTIFKAN</a>
                                             </button>
                                             <button id="id" class="btn btn-danger " type="button">
                                                 <a href="#" style="color:white;">BATAL</a>
-                                            </button>
+                                            </button>-->
                                         </div>
-                                        <div class="form-group col-md-4">
+                                        <!--<div class="form-group col-md-4">
                                             <label class="title">Status:</label>
                                             <div class="radio">
                                                 <label>
@@ -193,7 +193,7 @@
                                                     <input type="radio" name="status" />Batal
                                                 </label>
                                             </div>
-                                        </div>
+                                        </div>-->
                                     </div>
                                     <div class="row">
                                         <div class="col-md-10">
