--- a/Reston.EProc.Runner.IIS/View/spk.html
+++ b/Reston.EProc.Runner.IIS/View/spk.html
@@ -167,8 +167,9 @@
                                                 <thead>
                                                     <tr>
                                                         <th>Nama Pekerjaan</th>
-                                                        <th>HPS</th>
+                                                        <th>NIlai SPK</th>
                                                         <th>Klasifikasi</th>
+                                                        <th>No SPK</th>
                                                         <th>Pemenang</th>
                                                         <th></th>
                                                     </tr>
@@ -325,8 +326,9 @@
                 },
                 "columns": [
                     { "data": "Judul" },
-                    { "data": "HPS", "className": "rata_kanan" },
+                    { "data": "NilaiSPK", "className": "rata_kanan" },
                     { "data": "JenisPekerjaan" },
+                    { "data": "NoSpk" },
                     { "data": "Vendor" },
                     { "data": "StatusSpkName" },
                     { "data": null }
@@ -347,7 +349,7 @@
                             return  ' <a href="create-spk.html?id=' + data.Id + '" class="btn btn-success btn-sm product-title "> Detail </a> ';
                         },
 
-                        "targets": 5,
+                        "targets": 6,
                         "orderable": false
                     }
                 ],
