--- a/Reston.EProc.Runner.IIS/View/sistem-monitoring-detail.html
+++ b/Reston.EProc.Runner.IIS/View/sistem-monitoring-detail.html
@@ -329,7 +329,7 @@
                                                             <label class="title col-md-6" style="color:blue">Total Nilai :</label><label id="total_nilai" class="col-md-3" style="margin-top:10px; color:blue">0</label>
                                                         </div><div class="clearfix"></div>
                                                         <div class="form-group">
-                                                            <label class="title col-md-6" style="color:blue">Rata-rata Penilaian :</label><label id="jumlah_penilaian" class="col-sm-2" style="margin-top:10px; color:blue">0</label><label id="kpi" class="col-md-3" style="margin-top:10px; color:blue">0</label>
+                                                            <label class="title col-md-6" style="color:blue">Rata-rata Penilaian :</label><label id="jumlah_penilaian" class="col-sm-2" style="margin-top:10px; color:blue">-</label><label id="kpi" class="col-md-3" style="margin-top:10px; color:blue">-</label>
                                                         </div><div class="clearfix"></div>
                                                     </div>
                                                     <div class="form-group col-md-3">
