benerin spk,pks,dll

--- a/Reston.EProc.Runner.IIS/View/pks.html
+++ b/Reston.EProc.Runner.IIS/View/pks.html
@@ -167,7 +167,8 @@
                                                 <thead>
                                                     <tr>
                                                         <th>Nama Pekerjaan</th>
-                                                        <th>HPS</th>
+                                                        <th>Harga Rekanan</th>
+                                                        <th>Nomor PKS</th>
                                                         <th>Klasifikasi</th>
                                                         <th>Vendor</th>
                                                         <th>Status</th>
@@ -296,6 +297,7 @@
                 "columns": [
                     { "data": "Judul" },
                     { "data": "HPS", "className": "rata_kanan" },
+                     { "data": "NoPks" },
                     { "data": "JenisPekerjaan" },
                     { "data": "Vendor" },
                     { "data": "StatusPksName" },
@@ -323,7 +325,7 @@
                             }
                         },
 
-                        "targets": 5,
+                        "targets": 6,
                         "orderable": false
                     }
                 ],
