Sistem Monitoring Detail => Nambahin Blacklist
List To Do Masuk ke Dashboard

--- a/Reston.EProc.Runner.IIS/View/dashboard.html
+++ b/Reston.EProc.Runner.IIS/View/dashboard.html
@@ -122,9 +122,59 @@
                         </div><!-- /.box-body -->
                     </div>
                 </div>
+                
+                
+                <div class="row not-tabel-detail">
+                </div>
+
                 <div class="row not-tabel-detail">
                     <!--onging-->
-                    <div class="col-sm-12">
+                    <div class="col-sm-4">
+                        <div class="box box-white">
+                            <div class="box-body">
+                                <div class="box-header with-border">
+                                    <h3 class="box-title">Lists To Do!</h3>
+                                    <div class="box-tools pull-right">
+                                    </div>
+                                </div><!-- /.box-header -->
+                                <div class="box-body">
+                                    <div class="col-md-12">
+                                        <table class="table" style="border-style:none; min-height:100px; font-size:13px;">
+                                            <tr>
+                                                <td class="rata_kiri text-bold">Dokumen Pengadaan yang Butuh Persetujuan</td>
+                                                <td class="tengah text-bold"><a href="approval-perencanaan-belum-disetujui.html" id="persetujuan-pengadaan"></a></td>
+
+                                            </tr>
+                                            <tr>
+                                                <td class="rata_kiri text-bold">Dokumen Pengadaan yang Sudah di Setujui</td>
+                                                <td class="tengah text-bold"><a href="approval-perencanaan-sudah-disetujui.html" id="pengadaan-disetujui"></a></td>
+
+                                            </tr>
+                                            <tr>
+                                                <td class="rata_kiri text-bold">Dokumen Persetujuan Pemenang yang Butuh Persetujuan</td>
+                                                <td class="tengah text-bold"><a href="approval-persetujuan-pemenang-belum-disetujui.html" id="persetujuan-pemenang"></a></td>
+
+                                            </tr>
+                                            <tr>
+                                                <td class="rata_kiri text-bold">Dokumen Persetujuan Pemenang yang Sudah di Setujui</td>
+                                                <td class="tengah text-bold"><a href="approval-persetujuan-pemenang-sudah-disetujui.html" id="pemenang-disetujui"></a></td>
+
+                                            </tr>
+                                            <tr>
+                                                <td class="rata_kiri text-bold">Proyek Monitoring</td>
+                                                <td class="tengah text-bold"><a href="monitoring-selection.html" id="monitor-selection"></a></td>
+
+                                            </tr>
+                                        </table>
+                                    </div>
+                                </div>
+                                <!-- nav-tabs-custom -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!--onging-->
+                    <div class="col-sm-4">
                         <div class="box box-white">
                             <div class="box-header with-border">
                                 <h3 class="box-title">Summary</h3>
@@ -143,10 +193,9 @@
                             </div><!-- /.box-footer -->
                         </div><!-- /.box-body -->
                     </div>
-                </div>
-                <div class="row not-tabel-detail">
+
                     <!--onging-->
-                    <div class="col-sm-12">
+                    <div class="col-sm-4">
                         <div class="box box-white">
                             <div class="box-header with-border">
                                 <h3 class="box-title">Progress</h3>
@@ -458,5 +507,30 @@
         }
     </script>
     <!-- AdminLTE App <script src="dist/js/app.min.js"></script> -->
+    <script>
+        var persetujuan_pengadaan = 0;
+        var pengadaan_disetujui = 0;
+        var monitor_selection = 0;
+        $(function () {
+            $("#persetujuan-pengadaan").text(0);
+            $("#pengadaan-disetujui").text(0);
+            $("#persetujuan-pemenang").text(0);
+            $("#pemenang-disetujui").text(0);
+            $("#monitor-selection").text(0);
+            $.ajax({
+                url: 'api/PengadaanE/ListCount',
+                method: "GET",
+                success: function (data) {
+                    if (data != null) {
+                        $("#persetujuan-pengadaan").text(data.PengadaanButuhPerSetujuan);
+                        $("#pengadaan-disetujui").text(data.PengadaanDiSetujui);
+                        $("#persetujuan-pemenang").text(data.PemenangButuhPerSetujuan);
+                        $("#pemenang-disetujui").text(data.PemenangDiSetujui);
+                        $("#monitor-selection").text(data.MonitorSelection);
+                    }
+                }
+            });
+        });
+    </script>
 </body>
 </html>
